--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,61 @@
 @tailwind components;
 @tailwind utilities;
 
+img {
+  width: 100%;
+}
+/* Base styles for h1 and h2 */
+h1 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+  line-height: 1.2;
+}
+
+h2 {
+  font-size: 2rem;
+  margin-bottom: 0.75rem;
+  line-height: 1.3;
+}
+
+/* Media query for small devices (phones, less than 640px) */
+@media (max-width: 639px) {
+  h1 {
+    font-size: 1.8rem;
+    margin-bottom: 0.75rem;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+  }
+}
+
+/* Media query for medium devices (tablets, 640px to 1023px) */
+@media (min-width: 640px) and (max-width: 1023px) {
+  h1 {
+    font-size: 2.2rem;
+    margin-bottom: 1rem;
+  }
+
+  h2 {
+    font-size: 1.8rem;
+    margin-bottom: 0.75rem;
+  }
+}
+
+/* Media query for large devices (desktops, 1024px and up) */
+@media (min-width: 1024px) {
+  h1 {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+    margin-bottom: 0.75rem;
+  }
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
